# mace

./: pyproject.toml
.github/workflows/: unittest.yaml
mace/calculators/: mace.py  mace_torchsim.py
mace/cli/: active_learning_md.py  preprocess_data.py  run_train.py
mace/modules/: blocks.py  models.py  radial.py  symmetric_contraction.py  utils.py
mace/tools/: arg_parser.py  model_script_utils.py  torch_tools.py  train.py
mace/tools/fairchem_dataset/: lmdb_dataset_tools.py
tests/: test_benchmark.py  test_calculator.py  test_cueq_oeq.py  test_foundations.py  test_models.py  test_modules.py  test_run_train.py  test_run_train_allkeys.py  test_schedulefree.py
tests/calculators/: test_foundations_models.py
tests/cli/: test_multifiles.py  test_preprocess.py  test_run_train.py  test_run_train_allkeys.py
tests/modules/: test_radial.py
